inicio do design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <html>
 	<head>
+	<link rel="styleshhet" href="estilo.css"
 	</head>
 	<body>
 	 <h1>Projeto do Fabio Henrique</h1>
+	 <h2>Trabalhando em Equipe com Controle e Segurança</h2>
+	 
+	 <p>
+		Um curso que explora os beneficios de utilizar o Git como ferramenta
+		de controle de versão para projetos em qulquer linguagem, em qualquer
+		plataforma.
+	 </p>
+	 
+	 <h2>Principais beneficios</h2>
+	 <ul>
+		<li>Funciona de maneira distribuida</li>
+		<li>Permite a edição concorrente de arquivos do projeto</li>
+	 </ul>
 	</body>
 </html>
